[package]
name = "esparia"
version = "0.1.0"
authors = ["Joshua Miller <jsmiller@uchicago.edu>"]


[dependencies]
piston = "0.17.0"
piston2d-graphics = "0.13.0"
pistoncore-glutin_window = "0.20.0"
piston2d-opengl_graphics = "0.23.0"
piston3d-cam = "0.2.0"
piston-float = "0.2.0"
log = "0.3"
rand = "*"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
